2017-01-04  Stipe Tolj  <stolj at kannel.org>
    * gw/msg.h: add msg admin 'cmd_feature' to allow passing feature on/off 
      commands within the inter-box communication. NLC.
      
2017-01-10 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: deleted immutable assert from octstr_cat.

2016-12-13  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: fixing asymetric load distribution for this SMSC 
      type if there is a large set of non-relevant SMSCs groups and a set of
      relevant groups, the first group would be systematically prefered, which
      leads to an un-even distribution. The load is now set as with the other
      SMSC types based on the queue size.
      
2016-12-06  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: indicate the terminus SSMPP for secure SMPP.
    * gw/smsc/smsc_smpp.c: indicate 'SSMPP' for secure SMPP connections.
    
2016-11-14 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c, gw/smsc/smsc_cimd2.c, gw/smsc/smsc_smpp.c: applied patch to support
      DLR_EXPIRED. Thanks to Iwan Iwanowicz <iwan41 at gmail.com> for the patch.

2016-10-26 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: applied patch that fixes memory leak if TLV is sent twice.
      Thanks to Donald for this patch.

2016-08-22 Alexander Malysh <amalysh at kannel.org>
    * gw/load.c: fixed load calculation

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gwlib/xmlrpc.c: fixed crash if wrong formated xml given

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.[ch]: added DLR_EXPIRED and DLR_UNKNOWN dlr mask

2016-08-04 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwthread-pthread.c: fixed memory leak and panic if new thread could
      not be created

2016-07-14 Alexander Malysh <amalysh at kannel.org>
    * gw/load.[ch]: Changed precision timing to microsec.
      Thanks to kneodev at gmail.com for initial patch.
