@@ -1,3 +1,8 @@
+2017-02-22  Stipe Tolj  <stolj at kannel.org>
+    * gwlib/http.c: fix missing keep-alive indication when we DO keep the 
+      connection persistent as a server, cleaned up the corresponding 
+      negotiation constraint to fit the RFC2616 requirement.
+      
 2017-01-04  Stipe Tolj  <stolj at kannel.org>
     * gw/msg.h: add msg admin 'cmd_feature' to allow passing feature on/off 
       commands within the inter-box communication. NLC.
